fixed small align issue

--- a/PhDemoJS_index.css
+++ b/PhDemoJS_index.css
@@ -18,7 +18,7 @@ body{
     margin:auto;
     border-style: solid;
     border-color: rgb(173, 160, 185);
-    width:90%;
+    width:80%;
     border-radius: 100px;
     border-width: 2px;
     padding: 20px 0px;
